--- a/src/Components/Admin/style.css
+++ b/src/Components/Admin/style.css
@@ -11,6 +11,12 @@
     overflow-x: auto !important;
 
 }
+.isisis{
+    text-align: end !important;
+}
+.isis{
+    text-align: end !important;
+}
 .wer:hover{
     background-color: red;
 }
